<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Jamal_700_Primary"
    tools:context=".Contact">


    <TextView
        android:id="@+id/title_contactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="302dp"
        android:paddingTop="12dp"
        android:paddingBottom="20dp"
        android:text="@string/contact_uss"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="61dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="52dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="259dp"
        app:srcCompat="@drawable/ic_contact_phone" />

    <TextView
        android:id="@+id/textView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="198dp"
        android:layout_marginTop="394dp"
        android:text="@string/tv_phone"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="131dp"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/ic_contact_email" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="143dp"
        android:text="@string/tv_emai"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="256dp"
        android:layout_height="218dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="354dp"
        app:srcCompat="@drawable/full" />

</RelativeLayout>