<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/Jamal_700_Primary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        tools:context=".booking_activity">

        <!-- this is spinner price with its text -->

        <!-- this is spinner Brand with its text -->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_price"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4169E1"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_price_change_24">

            <AutoCompleteTextView
                android:id="@+id/autoCoText_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"

                android:hint="@string/price"
                android:padding="20dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_brand"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4169E1"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_price"
            app:startIconDrawable="@drawable/ic_baseline_car_rental_24">

            <AutoCompleteTextView
                android:id="@+id/autoCoText_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:hint="@string/brand"
                android:padding="20dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- this is spinner Gir with its text -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_gir"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4169E1"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_brand"
            app:startIconDrawable="@drawable/ic_outline_gir_24">

            <AutoCompleteTextView
                android:id="@+id/autoCoText_gir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:hint="@string/gir"
                android:padding="20dp"
                android:textSize="20sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- this is spinner Seats with its text -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_seats"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#4169E1"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_gir"
            app:startIconDrawable="@drawable/ic_baseline_seat_24">

            <AutoCompleteTextView
                android:id="@+id/autoCoText_seats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:hint="@string/seats"
                android:padding="20dp"
                android:textSize="20sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recview"
            android:layout_width="402dp"
            android:layout_height="238dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_seats" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>